--- a/src/components/common/FormsControls/FormsControls.module.css
+++ b/src/components/common/FormsControls/FormsControls.module.css
@@ -6,3 +6,10 @@
 .formControl.error span {
     color: red;
 }
+
+.formSummaryError {
+    color: red;
+    border: 1px solid red;
+    padding: 5px;
+    width: 200px;
+}
